Bug 1655652: Prevent bogus assertion in IsDefunct() for DummyAccessibles. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D85710